# GenAI

./: .gitignore  README.md
Toughword_Analyser/: analyzer.py  main.py  requirements.txt  toughness.py
backend/: __init__.py  analyzer.py  annotate_references.py  main.py  requirements.txt  toughness.py
backend/app/: __init__.py  config.py  main.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  definition_tough_word.py  definitions.py  parser.py  pdf_transform.py  tough_words.py
package/: LICENSE  README.md  pyproject.toml
package/src/glosser/: main.py  start.py
package/src/glosser/services/: __init__.py  definitions.py  evaluation.py  interactive_viewer.py  parser.py  pdf_transform.py  visual_design.py
package/src/glosser/templates/: viewer.html
test_data/: EVALUATION_SECTION.md  QUALITATIVE_STUDY.md  TSGAN_Aggression_Forecasting_glossed_final.json  eval_pipeline.py  evaluation_results.json  ground_truth_all.json
test_data/eval_snippets/: llm_comparison.json
